fix: 切换 dark mode 的闪烁问题

--- a/src/utils/global.css
+++ b/src/utils/global.css
@@ -10,6 +10,7 @@ body {
   --inlineCode-bg: rgba(255, 229, 100, 0.2);
   --inlineCode-text: #1a1a1a;
   background-color: var(--bg);
+  transition: color 0.3s ease-out, background 0.3s ease-out;
 }
 
 
@@ -222,4 +223,5 @@ pre[data-line] {
 
 nav > ol {
   list-style: none;
+  margin-left: 0;
 }
